Add optional image rendering control to render_outputs

--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -816,7 +816,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def render_outputs(outputs, ansi_renderer=strip_ansi):\n",
+    "def render_outputs(outputs, ansi_renderer=strip_ansi, include_imgs=True):\n",
     "    try: import mistletoe\n",
     "    except ImportError: return print('mistletoe not found -- please install it')\n",
     "    def render_output(out):\n",
@@ -830,11 +830,12 @@
     "            if d := _g('text/html'): return d\n",
     "            if d := _g('application/javascript'): return f'<script>{d}</script>'\n",
     "            if d := _g('text/markdown'): return mistletoe.markdown(d)\n",
-    "            if d := _g('image/svg+xml'): return d\n",
-    "            if d := _g('image/jpeg'): return f'<img src=\"data:image/jpeg;base64,{d}\"/>'\n",
-    "            if d := _g('image/png'): return f'<img src=\"data:image/png;base64,{d}\"/>'\n",
     "            if d := _g('text/latex'): return f'<div class=\"math\">${d}$</div>'\n",
     "            if d := _g('text/plain'): return f\"<pre>{escape(d)}</pre>\"\n",
+    "            if d := _g('image/svg+xml'): return d\n",
+    "            if include_imgs:\n",
+    "                if d := _g('image/jpeg'): return f'<img src=\"data:image/jpeg;base64,{d}\"/>'\n",
+    "                if d := _g('image/png'): return f'<img src=\"data:image/png;base64,{d}\"/>'\n",
     "        return ''\n",
     "    \n",
     "    return '\\n'.join(map(render_output, outputs))"
