--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -760,8 +760,8 @@
       "text/plain": [
        "[{'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
-       "  'text': ['CPU times: user 3 us, sys: 1e+03 ns, total: 4 us\\n',\n",
-       "   'Wall time: 5.96 us\\n']},\n",
+       "  'text': ['CPU times: user 1 us, sys: 1e+03 ns, total: 2 us\\n',\n",
+       "   'Wall time: 5.01 us\\n']},\n",
        " {'data': {'text/plain': ['2']},\n",
        "  'metadata': {},\n",
        "  'output_type': 'execute_result'}]"
@@ -796,7 +796,7 @@
        " {'ename': 'ZeroDivisionError',\n",
        "  'evalue': 'division by zero',\n",
        "  'output_type': 'error',\n",
-       "  'traceback': 'Traceback (most recent call last):\\n  File \"/home/jhoward/miniconda3/lib/python3.12/site-packages/IPython/core/interactiveshell.py\", line 3577, in run_code\\n    exec(code_obj, self.user_global_ns, self.user_ns)\\n  File \"<ipython-input-1-9e1622b385b6>\", line 1, in <module>\\n    1/0\\n    ~^~\\nZeroDivisionError: division by zero\\n'}]"
+       "  'traceback': 'Traceback (most recent call last):\\n  File \"/Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3577, in run_code\\n    exec(code_obj, self.user_global_ns, self.user_ns)\\n  File \"<ipython-input-1-9e1622b385b6>\", line 1, in <module>\\n    1/0\\n    ~^~\\nZeroDivisionError: division by zero\\n'}]"
       ]
      },
      "execution_count": null,
@@ -816,22 +816,27 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def render_outputs(outputs, ansi_renderer=strip_ansi, include_imgs=True):\n",
-    "    try: import mistletoe\n",
+    "def _pre(s, xtra=''): return f\"<pre {xtra}><code>{escape(s)}</code></pre>\"\n",
+    "\n",
+    "def render_outputs(outputs, ansi_renderer=strip_ansi, include_imgs=True, pygments=False):\n",
+    "    try:\n",
+    "        from mistletoe import markdown, HTMLRenderer\n",
+    "        from mistletoe.contrib.pygments_renderer import PygmentsRenderer\n",
     "    except ImportError: return print('mistletoe not found -- please install it')\n",
+    "    renderer = PygmentsRenderer if pygments else HTMLRenderer\n",
     "    def render_output(out):\n",
     "        otype = out['output_type']\n",
     "        if otype == 'stream':\n",
     "            txt = ansi_renderer(''.join(out['text']))\n",
-    "            return f\"<pre>{txt}</pre>\" if out['name']=='stdout' else f\"<pre class='stderr'>{txt}</pre>\"\n",
+    "            return _pre(txt, '' if out['name']=='stdout' else \"class='stderr'\")\n",
     "        elif otype in ('display_data','execute_result'):\n",
     "            data = out['data']\n",
     "            _g = lambda t: ''.join(data[t]) if t in data else None\n",
     "            if d := _g('text/html'): return d\n",
     "            if d := _g('application/javascript'): return f'<script>{d}</script>'\n",
-    "            if d := _g('text/markdown'): return mistletoe.markdown(d)\n",
+    "            if d := _g('text/markdown'): return markdown(d, renderer=renderer)\n",
     "            if d := _g('text/latex'): return f'<div class=\"math\">${d}$</div>'\n",
-    "            if d := _g('text/plain'): return f\"<pre>{escape(d)}</pre>\"\n",
+    "            if d := _g('text/plain'): return _pre(d)\n",
     "            if d := _g('image/svg+xml'): return d\n",
     "            if include_imgs:\n",
     "                if d := _g('image/jpeg'): return f'<img src=\"data:image/jpeg;base64,{d}\"/>'\n",
