ansi renderers escape automatically

--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -760,8 +760,8 @@
       "text/plain": [
        "[{'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
-       "  'text': ['CPU times: user 1 us, sys: 1e+03 ns, total: 2 us\\n',\n",
-       "   'Wall time: 5.01 us\\n']},\n",
+       "  'text': ['CPU times: user 1 us, sys: 0 ns, total: 1 us\\n',\n",
+       "   'Wall time: 3.1 us\\n']},\n",
        " {'data': {'text/plain': ['2']},\n",
        "  'metadata': {},\n",
        "  'output_type': 'execute_result'}]"
@@ -775,6 +775,60 @@
    "source": [
     "o = s.run(\"%time 1+1\")\n",
     "o"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The result of the last successful execution is stored in `result`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A trailing `;` stops the result from being captured:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.run(\"1+2;\")"
    ]
   },
   {
@@ -817,8 +871,9 @@
    "source": [
     "#| export\n",
     "def _pre(s, xtra=''): return f\"<pre {xtra}><code>{escape(s)}</code></pre>\"\n",
+    "def _strip(s): return strip_ansi(escape(s))\n",
     "\n",
-    "def render_outputs(outputs, ansi_renderer=strip_ansi, include_imgs=True, pygments=False):\n",
+    "def render_outputs(outputs, ansi_renderer=_strip, include_imgs=True, pygments=False):\n",
     "    try:\n",
     "        from mistletoe import markdown, HTMLRenderer\n",
     "        from mistletoe.contrib.pygments_renderer import PygmentsRenderer\n",
@@ -828,7 +883,8 @@
     "        otype = out['output_type']\n",
     "        if otype == 'stream':\n",
     "            txt = ansi_renderer(''.join(out['text']))\n",
-    "            return _pre(txt, '' if out['name']=='stdout' else \"class='stderr'\")\n",
+    "            xtra = '' if out['name']=='stdout' else \"class='stderr'\"\n",
+    "            return f\"<pre {xtra}><code>{txt}</code></pre>\"\n",
     "        elif otype in ('display_data','execute_result'):\n",
     "            data = out['data']\n",
     "            _g = lambda t: ''.join(data[t]) if t in data else None\n",
@@ -854,13 +910,13 @@
     {
      "data": {
       "text/html": [
-       "<pre>---------------------------------------------------------------------------\n",
+       "<pre ><code>---------------------------------------------------------------------------\n",
        "ZeroDivisionError                         Traceback (most recent call last)\n",
-       "File <ipython-input-1-9e1622b385b6>:1\n",
-       "----> 1 1/0\n",
+       "File &lt;ipython-input-1-9e1622b385b6&gt;:1\n",
+       "----&gt; 1 1/0\n",
        "\n",
        "ZeroDivisionError: division by zero\n",
-       "</pre>\n"
+       "</code></pre>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -890,13 +946,13 @@
     {
      "data": {
       "text/html": [
-       "<pre><span class=\"ansi-red-fg\">---------------------------------------------------------------------------</span>\n",
+       "<pre ><code><span class=\"ansi-red-fg\">---------------------------------------------------------------------------</span>\n",
        "<span class=\"ansi-red-fg\">ZeroDivisionError</span>                         Traceback (most recent call last)\n",
        "File <span class=\"ansi-green-fg\">&lt;ipython-input-1-9e1622b385b6&gt;:1</span>\n",
        "<span class=\"ansi-green-fg\">----&gt; 1</span> <span style=\"color: rgb(98,98,98)\">1</span><span style=\"color: rgb(98,98,98)\">/</span><span style=\"color: rgb(98,98,98)\">0</span>\n",
        "\n",
        "<span class=\"ansi-red-fg\">ZeroDivisionError</span>: division by zero\n",
-       "</pre>\n"
+       "</code></pre>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -909,49 +965,6 @@
    ],
    "source": [
     "HTML(render_outputs(o, ansi2html))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The result of the last successful execution is stored in `result`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s.result"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A trailing `;` stops the result from being captured:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s.run(\"1+2;\")"
    ]
   },
   {
