--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -105,7 +105,7 @@
     "class CaptureShell(InteractiveShell):\n",
     "    displayhook_class = _CustDisplayHook\n",
     "\n",
-    "    def __init__(self, path:str|Path=None, mpl_format='retina', history=False, timeout=None):\n",
+    "    def __init__(self, path:str|Path=None, mpl_format='retina', history=False, timeout:Optional[int]=None):\n",
     "        super().__init__()\n",
     "        self.history_manager.enabled = history\n",
     "        self.timeout = timeout\n",
@@ -119,7 +119,7 @@
     "            self.run_cell(f\"set_matplotlib_formats('{mpl_format}')\")\n",
     "\n",
     "    def run_cell(self, raw_cell, store_history=False, silent=False, shell_futures=True, cell_id=None,\n",
-    "                 stdout=True, stderr=True, display=True, timeout=None):\n",
+    "                 stdout=True, stderr=True, display=True, timeout:Optional[int]=None):\n",
     "        if not timeout: timeout = self.timeout\n",
     "        # TODO what if there's a comment?\n",
     "        semic = raw_cell.rstrip().endswith(';')\n",
@@ -706,9 +706,10 @@
     "def run(self:CaptureShell,\n",
     "        code:str, # Python/IPython code to run\n",
     "        stdout=True, # Capture stdout and save as output?\n",
-    "        stderr=True): # Capture stderr and save as output?\n",
+    "        stderr=True, # Capture stderr and save as output?\n",
+    "       timeout:Optional[int]=None): # Shell command will time out after {timeout} seconds\n",
     "    \"Run `code`, returning a list of all outputs in Jupyter notebook format\"\n",
-    "    res = self.run_cell(code, stdout=stdout, stderr=stderr)\n",
+    "    res = self.run_cell(code, stdout=stdout, stderr=stderr, timeout=timeout)\n",
     "    self.result = res.result.result\n",
     "    self.exc = res.exception\n",
     "    return _out_nb(res, self.display_formatter)"
@@ -861,6 +862,128 @@
    "source": [
     "o = s.run(\"1/0\")\n",
     "o"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'stdout', 'output_type': 'stream', 'text': ['no timeout\\n']}]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.run(\"import time; time.sleep(0.1); print('no timeout')\", timeout=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\\x1b[0;31m---------------------------------------------------------------------------\\x1b[0m\\n',\n",
+       " '\\x1b[0;31mTimeoutError\\x1b[0m                              Traceback (most recent call last)\\n']"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o = s.run(\"import time; time.sleep(1.1)\", timeout=1)\n",
+    "o[0]['text'][:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "@patch\n",
+    "async def run_async(self:CaptureShell,\n",
+    "        code: str,  # Python/IPython code to run\n",
+    "        stdout=True,  # Capture stdout and save as output?\n",
+    "        stderr=True,  # Capture stderr and save as output?\n",
+    "        timeout:Optional[int]=None): # Shell command will time out after {timeout} seconds\n",
+    "    return self.run(code, stdout=stdout, stderr=stderr, timeout=timeout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'data': {'text/plain': ['2']},\n",
+       "  'metadata': {},\n",
+       "  'output_type': 'execute_result'}]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "await s.run_async(\"1+1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'stdout', 'output_type': 'stream', 'text': ['no timeout\\n']}]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "await s.run_async(\"import time; time.sleep(0.1); print('no timeout')\", timeout=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\\x1b[0;31m---------------------------------------------------------------------------\\x1b[0m\\n',\n",
+       " '\\x1b[0;31mTimeoutError\\x1b[0m                              Traceback (most recent call last)\\n']"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "await s.run_async(\"import time; time.sleep(1.1);\", timeout=1)\n",
+    "o[0]['text'][:2]"
    ]
   },
   {
@@ -2010,9 +2133,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "env",
    "language": "python",
-   "name": "python3"
+   "name": "env"
   }
  },
  "nbformat": 4,
