--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -777,7 +777,7 @@
        "[{'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
        "  'text': ['CPU times: user 1 us, sys: 1 us, total: 2 us\\n',\n",
-       "   'Wall time: 2.15 us\\n']},\n",
+       "   'Wall time: 3.1 us\\n']},\n",
        " {'data': {'text/plain': ['2']},\n",
        "  'metadata': {},\n",
        "  'output_type': 'execute_result'}]"
@@ -963,48 +963,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'name': 'stdout', 'output_type': 'stream', 'text': ['no timeout\\n']}]"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "await s.run_async(\"import time; time.sleep(0.1); print('no timeout')\", timeout=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['\\x1b[0;31m---------------------------------------------------------------------------\\x1b[0m\\n',\n",
-       " '\\x1b[0;31mTimeoutError\\x1b[0m                              Traceback (most recent call last)\\n']"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "await s.run_async(\"import time; time.sleep(1.1);\", timeout=1)\n",
-    "o[0]['text'][:2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
@@ -1055,7 +1013,11 @@
        "----&gt; 1 import time; time.sleep(1.1)\n",
        "\n",
        "Cell In[6], line 7, in run_cell.&lt;locals&gt;.handler(*args)\n",
-       "----&gt; 7 def handler(*args): raise TimeoutError()\n",
+       "      5 if not timeout: timeout = self.timeout\n",
+       "      6 if timeout:\n",
+       "----&gt; 7     def handler(*args): raise TimeoutError()\n",
+       "      8     signal.signal(signal.SIGALRM, handler)\n",
+       "      9     signal.alarm(timeout)\n",
        "\n",
        "TimeoutError: \n",
        "</code></pre>\n"
@@ -1094,7 +1056,11 @@
        "<span class=\"ansi-green-fg\">----&gt; 1</span> <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">import</span> <span class=\"ansi-bold\" style=\"color: rgb(0,0,255)\">time</span>; time<span style=\"color: rgb(98,98,98)\">.</span>sleep(<span style=\"color: rgb(98,98,98)\">1.1</span>)\n",
        "\n",
        "Cell <span class=\"ansi-green-fg\">In[6], line 7</span>, in <span class=\"ansi-cyan-fg\">run_cell.&lt;locals&gt;.handler</span><span class=\"ansi-blue-fg\">(*args)</span>\n",
-       "<span class=\"ansi-green-fg\">----&gt; 7</span> <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">def</span> <span style=\"color: rgb(0,0,255)\">handler</span>(<span style=\"color: rgb(98,98,98)\">*</span>args): <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">raise</span> <span class=\"ansi-bold\" style=\"color: rgb(215,95,95)\">TimeoutError</span>()\n",
+       "<span class=\"ansi-green-intense-fg ansi-bold\">      5</span> <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">if</span> <span class=\"ansi-bold\" style=\"color: rgb(175,0,255)\">not</span> timeout: timeout <span style=\"color: rgb(98,98,98)\">=</span> <span style=\"color: rgb(0,135,0)\">self</span><span style=\"color: rgb(98,98,98)\">.</span>timeout\n",
+       "<span class=\"ansi-green-intense-fg ansi-bold\">      6</span> <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">if</span> timeout:\n",
+       "<span class=\"ansi-green-fg\">----&gt; 7</span>     <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">def</span> <span style=\"color: rgb(0,0,255)\">handler</span>(<span style=\"color: rgb(98,98,98)\">*</span>args): <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">raise</span> <span class=\"ansi-bold\" style=\"color: rgb(215,95,95)\">TimeoutError</span>()\n",
+       "<span class=\"ansi-green-intense-fg ansi-bold\">      8</span>     signal<span style=\"color: rgb(98,98,98)\">.</span>signal(signal<span style=\"color: rgb(98,98,98)\">.</span>SIGALRM, handler)\n",
+       "<span class=\"ansi-green-intense-fg ansi-bold\">      9</span>     signal<span style=\"color: rgb(98,98,98)\">.</span>alarm(timeout)\n",
        "\n",
        "<span class=\"ansi-red-fg\">TimeoutError</span>: \n",
        "</code></pre>\n"
