--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -707,6 +707,8 @@
     "    for x in o.display_objects: res.append(_mk_out(x.data, x.metadata))\n",
     "    if r is not None and not o.quiet:\n",
     "        res.append(_mk_out(*fmt.format(r), 'execute_result'))\n",
+    "    if 'execution_count' not in o: o['execution_count']=None\n",
+    "    for p in res: p['execution_count'] = o['execution_count']\n",
     "    return res"
    ]
   },
@@ -747,7 +749,10 @@
     {
      "data": {
       "text/plain": [
-       "[{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']}]"
+       "[{'name': 'stdout',\n",
+       "  'output_type': 'stream',\n",
+       "  'text': ['1\\n'],\n",
+       "  'execution_count': None}]"
       ]
      },
      "execution_count": null,
@@ -776,11 +781,13 @@
       "text/plain": [
        "[{'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
-       "  'text': ['CPU times: user 1 us, sys: 1 us, total: 2 us\\n',\n",
-       "   'Wall time: 3.1 us\\n']},\n",
+       "  'text': ['CPU times: user 1 us, sys: 0 ns, total: 1 us\\n',\n",
+       "   'Wall time: 4.05 us\\n'],\n",
+       "  'execution_count': None},\n",
        " {'data': {'text/plain': ['2']},\n",
        "  'metadata': {},\n",
-       "  'output_type': 'execute_result'}]"
+       "  'output_type': 'execute_result',\n",
+       "  'execution_count': None}]"
       ]
      },
      "execution_count": null,
@@ -862,11 +869,13 @@
        "   'File \\x1b[0;32m<ipython-input-1-9e1622b385b6>:1\\x1b[0m\\n',\n",
        "   '\\x1b[0;32m----> 1\\x1b[0m \\x1b[38;5;241m1\\x1b[39m\\x1b[38;5;241m/\\x1b[39m\\x1b[38;5;241m0\\x1b[39m\\n',\n",
        "   '\\n',\n",
-       "   '\\x1b[0;31mZeroDivisionError\\x1b[0m: division by zero\\n']},\n",
+       "   '\\x1b[0;31mZeroDivisionError\\x1b[0m: division by zero\\n'],\n",
+       "  'execution_count': None},\n",
        " {'ename': 'ZeroDivisionError',\n",
        "  'evalue': 'division by zero',\n",
        "  'output_type': 'error',\n",
-       "  'traceback': 'Traceback (most recent call last):\\n  File \"/Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3577, in run_code\\n    exec(code_obj, self.user_global_ns, self.user_ns)\\n  File \"<ipython-input-1-9e1622b385b6>\", line 1, in <module>\\n    1/0\\n    ~^~\\nZeroDivisionError: division by zero\\n'}]"
+       "  'traceback': 'Traceback (most recent call last):\\n  File \"/Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3577, in run_code\\n    exec(code_obj, self.user_global_ns, self.user_ns)\\n  File \"<ipython-input-1-9e1622b385b6>\", line 1, in <module>\\n    1/0\\n    ~^~\\nZeroDivisionError: division by zero\\n',\n",
+       "  'execution_count': None}]"
       ]
      },
      "execution_count": null,
@@ -887,7 +896,10 @@
     {
      "data": {
       "text/plain": [
-       "[{'name': 'stdout', 'output_type': 'stream', 'text': ['no timeout\\n']}]"
+       "[{'name': 'stdout',\n",
+       "  'output_type': 'stream',\n",
+       "  'text': ['no timeout\\n'],\n",
+       "  'execution_count': None}]"
       ]
      },
      "execution_count": null,
@@ -947,7 +959,8 @@
       "text/plain": [
        "[{'data': {'text/plain': ['2']},\n",
        "  'metadata': {},\n",
-       "  'output_type': 'execute_result'}]"
+       "  'output_type': 'execute_result',\n",
+       "  'execution_count': None}]"
       ]
      },
      "execution_count": null,
@@ -1013,11 +1026,7 @@
        "----&gt; 1 import time; time.sleep(1.1)\n",
        "\n",
        "Cell In[6], line 7, in run_cell.&lt;locals&gt;.handler(*args)\n",
-       "      5 if not timeout: timeout = self.timeout\n",
-       "      6 if timeout:\n",
-       "----&gt; 7     def handler(*args): raise TimeoutError()\n",
-       "      8     signal.signal(signal.SIGALRM, handler)\n",
-       "      9     signal.alarm(timeout)\n",
+       "----&gt; 7 def handler(*args): raise TimeoutError()\n",
        "\n",
        "TimeoutError: \n",
        "</code></pre>\n"
@@ -1056,11 +1065,7 @@
        "<span class=\"ansi-green-fg\">----&gt; 1</span> <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">import</span> <span class=\"ansi-bold\" style=\"color: rgb(0,0,255)\">time</span>; time<span style=\"color: rgb(98,98,98)\">.</span>sleep(<span style=\"color: rgb(98,98,98)\">1.1</span>)\n",
        "\n",
        "Cell <span class=\"ansi-green-fg\">In[6], line 7</span>, in <span class=\"ansi-cyan-fg\">run_cell.&lt;locals&gt;.handler</span><span class=\"ansi-blue-fg\">(*args)</span>\n",
-       "<span class=\"ansi-green-intense-fg ansi-bold\">      5</span> <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">if</span> <span class=\"ansi-bold\" style=\"color: rgb(175,0,255)\">not</span> timeout: timeout <span style=\"color: rgb(98,98,98)\">=</span> <span style=\"color: rgb(0,135,0)\">self</span><span style=\"color: rgb(98,98,98)\">.</span>timeout\n",
-       "<span class=\"ansi-green-intense-fg ansi-bold\">      6</span> <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">if</span> timeout:\n",
-       "<span class=\"ansi-green-fg\">----&gt; 7</span>     <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">def</span> <span style=\"color: rgb(0,0,255)\">handler</span>(<span style=\"color: rgb(98,98,98)\">*</span>args): <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">raise</span> <span class=\"ansi-bold\" style=\"color: rgb(215,95,95)\">TimeoutError</span>()\n",
-       "<span class=\"ansi-green-intense-fg ansi-bold\">      8</span>     signal<span style=\"color: rgb(98,98,98)\">.</span>signal(signal<span style=\"color: rgb(98,98,98)\">.</span>SIGALRM, handler)\n",
-       "<span class=\"ansi-green-intense-fg ansi-bold\">      9</span>     signal<span style=\"color: rgb(98,98,98)\">.</span>alarm(timeout)\n",
+       "<span class=\"ansi-green-fg\">----&gt; 7</span> <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">def</span> <span style=\"color: rgb(0,0,255)\">handler</span>(<span style=\"color: rgb(98,98,98)\">*</span>args): <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">raise</span> <span class=\"ansi-bold\" style=\"color: rgb(215,95,95)\">TimeoutError</span>()\n",
        "\n",
        "<span class=\"ansi-red-fg\">TimeoutError</span>: \n",
        "</code></pre>\n"
@@ -1134,11 +1139,13 @@
        "   'File \\x1b[0;32m<ipython-input-1-01648acb07bd>:1\\x1b[0m\\n',\n",
        "   '\\x1b[0;32m----> 1\\x1b[0m \\x1b[38;5;28;01mraise\\x1b[39;00m \\x1b[38;5;167;01mException\\x1b[39;00m(\\x1b[38;5;124m\"\\x1b[39m\\x1b[38;5;124mOops\\x1b[39m\\x1b[38;5;124m\"\\x1b[39m)\\n',\n",
        "   '\\n',\n",
-       "   '\\x1b[0;31mException\\x1b[0m: Oops\\n']},\n",
+       "   '\\x1b[0;31mException\\x1b[0m: Oops\\n'],\n",
+       "  'execution_count': None},\n",
        " {'ename': 'Exception',\n",
        "  'evalue': 'Oops',\n",
        "  'output_type': 'error',\n",
-       "  'traceback': 'Traceback (most recent call last):\\n  File \"/Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3577, in run_code\\n    exec(code_obj, self.user_global_ns, self.user_ns)\\n  File \"<ipython-input-1-01648acb07bd>\", line 1, in <module>\\n    raise Exception(\"Oops\")\\nException: Oops\\n'}]"
+       "  'traceback': 'Traceback (most recent call last):\\n  File \"/Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3577, in run_code\\n    exec(code_obj, self.user_global_ns, self.user_ns)\\n  File \"<ipython-input-1-01648acb07bd>\", line 1, in <module>\\n    raise Exception(\"Oops\")\\nException: Oops\\n',\n",
+       "  'execution_count': None}]"
       ]
      },
      "execution_count": null,
@@ -1184,10 +1191,7 @@
     "    if cell.cell_type!='code': return\n",
     "    self._cell_idx = cell.idx_ + 1\n",
     "    outs = self.run(cell.source)\n",
-    "    if outs:\n",
-    "        cell.outputs = _dict2obj(outs)\n",
-    "        for o in outs:\n",
-    "            if 'execution_count' in o: cell['execution_count'] = o['execution_count']"
+    "    if outs: cell.outputs = _dict2obj(outs)"
    ]
   },
   {
@@ -1238,10 +1242,14 @@
     {
      "data": {
       "text/plain": [
-       "[{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']},\n",
+       "[{'name': 'stdout',\n",
+       "  'output_type': 'stream',\n",
+       "  'text': ['1\\n'],\n",
+       "  'execution_count': None},\n",
        " {'data': {'text/plain': ['2']},\n",
        "  'metadata': {},\n",
-       "  'output_type': 'execute_result'}]"
+       "  'output_type': 'execute_result',\n",
+       "  'execution_count': None}]"
       ]
      },
      "execution_count": null,
