--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -781,8 +781,8 @@
       "text/plain": [
        "[{'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
-       "  'text': ['CPU times: user 1 us, sys: 0 ns, total: 1 us\\n',\n",
-       "   'Wall time: 4.05 us\\n'],\n",
+       "  'text': ['CPU times: user 2 us, sys: 1 us, total: 3 us\\n',\n",
+       "   'Wall time: 4.29 us\\n'],\n",
        "  'execution_count': None},\n",
        " {'data': {'text/plain': ['2']},\n",
        "  'metadata': {},\n",
@@ -1025,7 +1025,7 @@
        "File &lt;ipython-input-1-a5c3817716b6&gt;:1\n",
        "----&gt; 1 import time; time.sleep(1.1)\n",
        "\n",
-       "Cell In[6], line 7, in run_cell.&lt;locals&gt;.handler(*args)\n",
+       "Cell In[143], line 7, in run_cell.&lt;locals&gt;.handler(*args)\n",
        "----&gt; 7 def handler(*args): raise TimeoutError()\n",
        "\n",
        "TimeoutError: \n",
@@ -1064,7 +1064,7 @@
        "File <span class=\"ansi-green-fg\">&lt;ipython-input-1-a5c3817716b6&gt;:1</span>\n",
        "<span class=\"ansi-green-fg\">----&gt; 1</span> <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">import</span> <span class=\"ansi-bold\" style=\"color: rgb(0,0,255)\">time</span>; time<span style=\"color: rgb(98,98,98)\">.</span>sleep(<span style=\"color: rgb(98,98,98)\">1.1</span>)\n",
        "\n",
-       "Cell <span class=\"ansi-green-fg\">In[6], line 7</span>, in <span class=\"ansi-cyan-fg\">run_cell.&lt;locals&gt;.handler</span><span class=\"ansi-blue-fg\">(*args)</span>\n",
+       "Cell <span class=\"ansi-green-fg\">In[143], line 7</span>, in <span class=\"ansi-cyan-fg\">run_cell.&lt;locals&gt;.handler</span><span class=\"ansi-blue-fg\">(*args)</span>\n",
        "<span class=\"ansi-green-fg\">----&gt; 7</span> <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">def</span> <span style=\"color: rgb(0,0,255)\">handler</span>(<span style=\"color: rgb(98,98,98)\">*</span>args): <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">raise</span> <span class=\"ansi-bold\" style=\"color: rgb(215,95,95)\">TimeoutError</span>()\n",
        "\n",
        "<span class=\"ansi-red-fg\">TimeoutError</span>: \n",
@@ -1465,7 +1465,8 @@
        "[{'data': {'text/plain': ['<IPython.core.display.Markdown object>'],\n",
        "   'text/markdown': [\"This is *bold*. Here's a [link](https://www.fast.ai).\"]},\n",
        "  'metadata': {},\n",
-       "  'output_type': 'execute_result'}]"
+       "  'output_type': 'execute_result',\n",
+       "  'execution_count': None}]"
       ]
      },
      "execution_count": null,
@@ -1520,11 +1521,13 @@
        "   'File \\x1b[0;32m<ipython-input-1-1c97c1d317ab>:1\\x1b[0m\\n',\n",
        "   '\\x1b[0;32m----> 1\\x1b[0m \\x1b[38;5;28;01mraise\\x1b[39;00m \\x1b[38;5;167;01mException\\x1b[39;00m(\\x1b[38;5;124m\"\\x1b[39m\\x1b[38;5;124mOopsie!\\x1b[39m\\x1b[38;5;124m\"\\x1b[39m)\\n',\n",
        "   '\\n',\n",
-       "   '\\x1b[0;31mException\\x1b[0m: Oopsie!\\n']},\n",
+       "   '\\x1b[0;31mException\\x1b[0m: Oopsie!\\n'],\n",
+       "  'execution_count': None},\n",
        " {'ename': 'Exception',\n",
        "  'evalue': 'Oopsie!',\n",
        "  'output_type': 'error',\n",
-       "  'traceback': 'Traceback (most recent call last):\\n  File \"/Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3577, in run_code\\n    exec(code_obj, self.user_global_ns, self.user_ns)\\n  File \"<ipython-input-1-1c97c1d317ab>\", line 1, in <module>\\n    raise Exception(\"Oopsie!\")\\nException: Oopsie!\\n'}]"
+       "  'traceback': 'Traceback (most recent call last):\\n  File \"/Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3577, in run_code\\n    exec(code_obj, self.user_global_ns, self.user_ns)\\n  File \"<ipython-input-1-1c97c1d317ab>\", line 1, in <module>\\n    raise Exception(\"Oopsie!\")\\nException: Oopsie!\\n',\n",
+       "  'execution_count': None}]"
       ]
      },
      "execution_count": null,
@@ -1613,10 +1616,14 @@
     {
      "data": {
       "text/plain": [
-       "[{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']},\n",
+       "[{'name': 'stdout',\n",
+       "  'output_type': 'stream',\n",
+       "  'text': ['1\\n'],\n",
+       "  'execution_count': None},\n",
        " {'data': {'text/plain': ['2']},\n",
        "  'metadata': {},\n",
-       "  'output_type': 'execute_result'}]"
+       "  'output_type': 'execute_result',\n",
+       "  'execution_count': None}]"
       ]
      },
      "execution_count": null,
@@ -1679,7 +1686,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']}, {'data': {'text/plain': ['2']}, 'metadata': {}, 'output_type': 'execute_result'}]\n"
+      "[{'execution_count': None, 'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']}, {'data': {'text/plain': ['2']}, 'execution_count': None, 'metadata': {}, 'output_type': 'execute_result'}]\n"
      ]
     }
    ],
@@ -1741,11 +1748,11 @@
       "\n",
       "While Executing Cell #2:\n",
       "Traceback (most recent call last):\n",
-      "  File \"/var/folders/ss/34z569j921v58v8n1n_8z7h40000gn/T/ipykernel_18616/1421292703.py\", line 3, in <module>\n",
+      "  File \"/var/folders/ss/34z569j921v58v8n1n_8z7h40000gn/T/ipykernel_6273/1421292703.py\", line 3, in <module>\n",
       "    s.execute('../tests/error.ipynb', exc_stop=True)\n",
-      "  File \"/var/folders/ss/34z569j921v58v8n1n_8z7h40000gn/T/ipykernel_18616/3609882568.py\", line 18, in execute\n",
+      "  File \"/var/folders/ss/34z569j921v58v8n1n_8z7h40000gn/T/ipykernel_6273/3609882568.py\", line 18, in execute\n",
       "    self.run_all(nb, exc_stop=exc_stop, preproc=preproc, postproc=postproc,\n",
-      "  File \"/var/folders/ss/34z569j921v58v8n1n_8z7h40000gn/T/ipykernel_18616/3068237356.py\", line 19, in run_all\n",
+      "  File \"/var/folders/ss/34z569j921v58v8n1n_8z7h40000gn/T/ipykernel_6273/3068237356.py\", line 19, in run_all\n",
       "    if self.exc and exc_stop: raise self.exc from None\n",
       "                              ^^^^^^^^^^^^^^^^^^^^^^^^\n",
       "  File \"/Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3577, in run_code\n",
@@ -1843,9 +1850,9 @@
     "#|hide\n",
     "# `display_data` flushes stdout and stderr - in that order\n",
     "res = CaptureShell().run(\"import sys; sys.stderr.write('Error!'); print(1); display(1)\")\n",
-    "test_eq(res, [{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']},\n",
-    "              {'name': 'stderr', 'output_type': 'stream', 'text': ['Error!']},\n",
-    "              {'data': {'text/plain': ['1']}, 'metadata': {}, 'output_type': 'display_data'}])"
+    "test_eq(res, [{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n'], 'execution_count': None},\n",
+    "              {'name': 'stderr', 'output_type': 'stream', 'text': ['Error!'], 'execution_count': None},\n",
+    "              {'data': {'text/plain': ['1']}, 'metadata': {}, 'output_type': 'display_data', 'execution_count': None}])"
    ]
   },
   {
@@ -1857,7 +1864,7 @@
     "#|hide\n",
     "# Consecutive writes to stdout are grouped\n",
     "res = CaptureShell().run('print(1); print(2); print(3)')\n",
-    "test_eq(res, [{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n', '2\\n', '3\\n']}])"
+    "test_eq(res, [{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n', '2\\n', '3\\n'], 'execution_count': None}])"
    ]
   },
   {
@@ -1869,8 +1876,8 @@
     "#|hide\n",
     "# Consecutive writes to stdout are grouped despite an intermediate write to stderr, which is captured after\n",
     "res = CaptureShell().run(\"import sys; print(1); print(2); sys.stderr.write('Error!'); print(3)\")\n",
-    "test_eq(res, [{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n', '2\\n', '3\\n']},\n",
-    "              {'name': 'stderr', 'output_type': 'stream', 'text': ['Error!']}])"
+    "test_eq(res, [{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n', '2\\n', '3\\n'], 'execution_count': None},\n",
+    "              {'name': 'stderr', 'output_type': 'stream', 'text': ['Error!'], 'execution_count': None}])"
    ]
   },
   {
@@ -1882,10 +1889,10 @@
     "#|hide\n",
     "# `execute_result` is always last\n",
     "res = CaptureShell().run(\"import sys; sys.stderr.write('Error!'); print(1); display(1); 1\")\n",
-    "test_eq(res, [{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']},\n",
-    "              {'name': 'stderr', 'output_type': 'stream', 'text': ['Error!']},\n",
-    "              {'data': {'text/plain': ['1']}, 'metadata': {}, 'output_type': 'display_data'},\n",
-    "              {'data': {'text/plain': ['1']}, 'metadata': {}, 'output_type': 'execute_result'}])"
+    "test_eq(res, [{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n'], 'execution_count': None},\n",
+    "              {'name': 'stderr', 'output_type': 'stream', 'text': ['Error!'], 'execution_count': None},\n",
+    "              {'data': {'text/plain': ['1']}, 'metadata': {}, 'output_type': 'display_data', 'execution_count': None},\n",
+    "              {'data': {'text/plain': ['1']}, 'metadata': {}, 'output_type': 'execute_result', 'execution_count': None}])"
    ]
   },
   {
@@ -1947,7 +1954,10 @@
        "  'execution_count': None,\n",
        "  'id': 'ea528db5',\n",
        "  'metadata': {},\n",
-       "  'outputs': [{'name': 'stdout', 'output_type': 'stream', 'text': ['2\\n']}],\n",
+       "  'outputs': [{'name': 'stdout',\n",
+       "    'output_type': 'stream',\n",
+       "    'text': ['2\\n'],\n",
+       "    'execution_count': None}],\n",
        "  'source': 'print(a)',\n",
        "  'idx_': 1}]"
       ]
